{{$NEXT}}

 * Added support for "rubberband" dynamic zooming, in which users can
   click and drag to select a region to zoom to.  Can be accessed
   either by dragging on the track number scale bar or by holding down
   the Shift key and dragging in the main track panel.

 * flatfile-to-json.pl: now much faster and more memory-efficient,
   especially for GFF3 files.  Remember that '###' directives are very
   important to have in large GFF3 files!  Also removed nonfunctional
   --extraData switch.

 * Added bin/remove-track.pl, a script to remove a track from a
   JBrowse data directory.  Run bin/remove-track.pl -? to see its
   documentation.

 * Added build instrumentation to support a JSDoc-based system of
   developer API documentation.  This documentation is still far from
   complete.

 * Ian Davis contributed code to add a view of the reverse strand of
   the sequence in the DNA track.  Thanks Ian!

 * Fixed bug in which, for some sequence chunk sizes, the DNA bases
   would display incorrectly.

 * Added nav, overview, and tracklist URL options that, when set to 0,
   turn off the navigation box, the overview panel, and the track
   list, respectively.  When all of these are off, and if run in an
   iframe, JBrowse looks similar to the output of GBrowse's
   gbrowse_img script.  More documentation on this coming soon.
   Thanks to Julie Moon, a co-op student working at OICR, for this
   work!

 * Added minor gridlines to the main track view.

 * Fixed a long-standing off-by-one bug where the window could not be
   scrolled to view the last base in the reference sequence.

 * Coordinates displayed in the user interface are now 1-based closed
   coordinates, which are more familiar to most users.  Previously,
   the labels displayed interbase (i.e. 0-based half-open)
   coordinates.

 * NON-BACKWARDS-COMPATIBLE improvements to the JSON format used for
   track configuration, feature data, and image data