@@ -5,6 +5,9 @@
    either by dragging on the track number scale bar or by holding down
    the Shift key and dragging in the main track panel.
 
+ * Clicking on the overview bar now centers the view at the clicked
+   position.
+
  * flatfile-to-json.pl: now much faster and more memory-efficient,
    especially for GFF3 files.  Remember that '###' directives are very
    important to have in large GFF3 files!  Also removed nonfunctional
